<resources>
    <string name="app_name">Mr.Jim</string>
    <string name="indicacion_numero">Ingrese su numero, se le enviara un <b>SMS</b> con su codigo:</string>
    <string name="ini_569">+569</string>
    <string name="verificar">Verificar</string>
    <string name="tit_servicios">Escoja un servicio</string>
    <string name="ingrese_numero">Ingrese su numero</string>
    <string name="mejoras_servicio">Servicios Adicionales</string>
    <string name="mejora_1">Mejora 1</string>
    <string name="mejora_2">Mejora 2</string>
    <string name="servicio_1">Servicio 1</string>
    <string name="servicio_2">Servicio 2</string>
    <string name="servicio_3">Servicio 3</string>
    <string name="servicio_4">Servicio 4</string>
    <string name="API_KEY_GOOGLE">AIzaSyBgtP2yRhYlEZYqwW_VMOS9rRkwD-yWFno</string>
    <string name="titUbicacion">Lugar de retiro y entrega</string>
    <string name="ingrese_direccion">Ingrese su direccion</string>
    <string name="seleccione_ubicacion">Seleccione desde un Mapa</string>
    <string name="continuar">Continuar</string>
    <string name="continuar_sm">Continuar sin mejora</string>
    <string name="seleccione_horario">Seleccione un horario</string>
    <string name="horario_1">08:00 &#8211; 12:00</string>
    <string name="horario_2">12:00 &#8211; 17:00</string>
    <string name="horario_3">17:00 &#8211; 22:00</string>
    <string name="total">Total:</string>
    <string name="confirmar_servicio">Confirmar servicio</string>
    <string name="codigo">Codigo:</string>
    <string name="enviar_codigo">Enviar Codigo</string>
    <string name="agregado">Agregado</string>
    <string name="tit_pago">Seleccione un medio de pago</string>
    <string name="efectivo">Efectivo</string>
    <string name="debito">Transferencia</string>
    <string name="credito">Credito</string>
    <string name="gracias">Gracias por solicitar nuestro servicio.</string>
    <string name="nos_contactaremos">En breve nos contáctaremos contigo.</string>
    <string name="detalle">Detalle del servicio</string>
    <string name="telefono">Teléfono:</string>
    <string name="servicio">Servicio:</string>
    <string name="mejora">Mejora:</string>
    <string name="direccion">Dirección:</string>
    <string name="horario">Horario:</string>
    <string name="tipo_de_pago">Medio de Pago:</string>
    <string name="solicitar_servicio">Solicitar servicio</string>
    <string name="nombre">Nombre:</string>
    <string name="comuna">Comuna</string>
    <string name="calle">Calle</string>
    <string name="casa">Casa</string>
    <string name="departamento">Departamento</string>
    <string name="numero">Número</string>
    <string name="nro_departamento">Nro. Departamento</string>
    <string name="listo">Listo</string>
    <string name="ingrese_nombre">Ingrese un nombre</string>
    <string name="entrar">Entrar</string>
    <string name="titulo_nombre">¿Quién nos recibirá?</string>
    <string name="nombres">Nombres:</string>
    <string name="no_se_ha_agregado_ningun_nombre">No se ha agregado ningun nombre</string>
    <string name="no_ha_agregado_ninguna_direccion">No ha agregado ninguna direccion</string>
    <string name="anadir">Añadir</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGllZ29iaiIsImEiOiJjazFwa3NsZzYwMjloM2NrNGl4dGZ6NzhkIn0.CAEnSOQiy1gPcIcngcQcfg</string>

</resources>
