<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tvMejoraServ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="75dp"
        android:text="@string/mejoras_servicio"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMejora1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="59dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/mejora_1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSinMejora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMejoraServ" />

    <Button
        android:id="@+id/btnMejora2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="59dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/mejora_2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSinMejora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMejoraServ" />

    <Button
        android:id="@+id/btnSinMejora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="198dp"
        android:text="@string/sin_complemento"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>